--- a/src/main/resources/com/example/richslaves/main.fxml
+++ b/src/main/resources/com/example/richslaves/main.fxml
@@ -9,15 +9,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" stylesheets="@hello-style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.richslaves.HelloController">
+<AnchorPane fx:id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" stylesheets="@styles/hello-style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.richslaves.LoginController">
   <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="36.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="50.0">
     <Image url="@Images/Logo.png" />
   </ImageView>
-  <Button fx:id="buttonLogin" layoutX="458.0" layoutY="297.0" mnemonicParsing="false" onAction="#switchToScene3" prefHeight="46.0" prefWidth="83.0" text="LOG IN " textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="451.0" AnchorPane.topAnchor="301.0">
+  <Button fx:id="buttonLogin" layoutX="458.0" layoutY="297.0" mnemonicParsing="false" onAction="#switchToDashboard" prefHeight="46.0" prefWidth="83.0" text="LOG IN " textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="451.0" AnchorPane.topAnchor="301.0">
       <font>
          <Font size="17.0" />
       </font></Button>
-  <Button id="buttonRegister" fx:id="buttonRegister" layoutX="652.0" layoutY="297.0" mnemonicParsing="false" onAction="#switchToScene2" prefHeight="46.0" prefWidth="99.0" text="REGISTER " textAlignment="CENTER" textFill="WHITE" AnchorPane.rightAnchor="47.0" AnchorPane.topAnchor="301.0">
+  <Button id="buttonRegister" fx:id="buttonRegister" layoutX="652.0" layoutY="297.0" mnemonicParsing="false" onAction="#switchToRegister" prefHeight="46.0" prefWidth="99.0" text="REGISTER " textAlignment="CENTER" textFill="WHITE" AnchorPane.rightAnchor="47.0" AnchorPane.topAnchor="301.0">
       <font>
          <Font size="17.0" />
       </font></Button>
