--- a/src/main/resources/com/example/richslaves/panel/meat-page.fxml
+++ b/src/main/resources/com/example/richslaves/panel/meat-page.fxml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="742.0" stylesheets="@../styles/hello-style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.richslaves.DashboardController">
-    <TableView layoutX="14.0" layoutY="14.0" prefHeight="408.0" prefWidth="548.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0"
+            prefWidth="600.0" style="-fx-background-color: #0A0F23;" xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.richslaves.MeatController">
+    <TableView fx:id="tableMeat" layoutX="14.0" layoutY="14.0" prefHeight="445.0" prefWidth="572.0"
+               AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
       <columns>
-          <TableColumn prefWidth="71.19998359680176" text="C1" />
-          <TableColumn prefWidth="283.99999237060547" text="C2" />
-          <TableColumn minWidth="0.0" prefWidth="96.0" text="Column X" />
-          <TableColumn minWidth="0.0" prefWidth="100.0" text="Column X" />
+          <TableColumn fx:id="idMeat" prefWidth="64.00000286102295" text="Id"/>
+          <TableColumn fx:id="nameMeat" minWidth="0.0" prefWidth="300.80003356933594" text="Name"/>
+          <TableColumn fx:id="countSMeat" minWidth="0.0" prefWidth="108.79998779296875" text="Amount"/>
+          <TableColumn fx:id="priceMeat" prefWidth="106.39996337890625" text="Price"/>
       </columns>
     </TableView>
-    <Button layoutX="618.0" layoutY="45.0" mnemonicParsing="false" prefHeight="48.8" prefWidth="133.6" stylesheets="@../styles/hello-style.css" text="SHOW ITEM" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="65.0" />
-    <Button layoutX="595.0" layoutY="124.0" mnemonicParsing="false" prefHeight="48.8" prefWidth="133.6" stylesheets="@../styles/hello-style.css" text="MODIFY" AnchorPane.bottomAnchor="247.0" />
-    <Button layoutX="595.0" layoutY="228.0" mnemonicParsing="false" prefHeight="48.8" prefWidth="133.6" stylesheets="@../styles/hello-style.css" text="ADD" AnchorPane.bottomAnchor="70.99999999999997" />
-    <Button layoutX="595.0" layoutY="232.0" mnemonicParsing="false" prefHeight="48.8" prefWidth="133.6" stylesheets="@../styles/hello-style.css" text="DELETE" AnchorPane.bottomAnchor="157.0" />
-   <Label layoutX="631.0" layoutY="14.0" text="MEAT" textFill="WHITE">
-      <font>
-         <Font size="24.0" />
-      </font>
-   </Label>
 </AnchorPane>
